--- a/src/domain/AuthForm/style.css
+++ b/src/domain/AuthForm/style.css
@@ -40,7 +40,7 @@
 .cinput {
 	background-color: #eee;
 	border: none;
-	padding: 12px 15px;
+	padding: 8px 15px;
 	margin: 8px 0;
 	width: 100%;
 }
@@ -53,7 +53,7 @@
 	overflow: hidden;
 	width: 768px;
 	/* max-width: 100%; */
-	margin: 40px 0;
+	margin: 120px 0;
 	min-height: 500px;
 }
 
@@ -175,7 +175,8 @@
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
-	margin: 0 5px;
-	height: 40px;
-	width: 40px;
+	margin: 0 15px;
+	height: 60px;
+	width: 60px;
+	font-size: 22px;
 }
