--- a/src/domain/Header/style.css
+++ b/src/domain/Header/style.css
@@ -2,6 +2,13 @@
   padding: 0 10% !important;
 }
 
+.headerNavb{
+  background: cornflowerblue;
+  color: #fff;
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+}
+
 .txtbox {
   border-radius: 0px;
   width: 536px !important;
