--- a/src/domain/Account/style.css
+++ b/src/domain/Account/style.css
@@ -39,14 +39,17 @@ body {
 .Account-side_sect li a {
   padding: 14px 15px;
   font-size: 15px;
-  border-bottom: 1px solid #eee;
+  border-width: 1px 0px !important;
+  border-style: solid;
+  border-color: #eee;
   font-weight: 500;
   color: #969696;
 }
 
 .Account-sublist a {
-  padding: 10px 5px !important;
+  padding: 12px 5px 12px 40px !important;
+  font-weight: 400 !important;
   color: black !important;
-  font-size: 13px !important;
+  font-size: 14px !important;
   text-transform: none !important;
 }
