--- a/src/domain/AuthForm/style.css
+++ b/src/domain/AuthForm/style.css
@@ -1,7 +1,7 @@
 
 
 .cbutton {
-	border-radius: 20px;
+	border-radius: 5px;
 	border: 1px solid cornflowerblue;
 	background-color: cornflowerblue;
 	color: #FFFFFF;
@@ -32,7 +32,7 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	padding: 0 50px;
+	padding: 0 20px;
 	height: 100%;
 	text-align: center;
 }
@@ -46,15 +46,15 @@
 }
 
 .authContainer {
-	background-color: #fff;
-	border-radius: 10px;
-	box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
-	position: relative;
-	overflow: hidden;
-	width: 768px;
-	/* max-width: 100%; */
-	margin: 120px 0;
-	min-height: 500px;
+    /* background-color: #fff; */
+    border-radius: 10px;
+    /* box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%); */
+    /* position: relative; */
+    /* overflow: hidden; */
+    width: 768px;
+    /* max-width: 100%; */
+    margin: 100px 0;
+    min-height: 500px;
 }
 
 .form-container {
