--- a/src/domain/NotFound/NotFound.css
+++ b/src/domain/NotFound/NotFound.css
@@ -1,6 +1,9 @@
 .error-template {
   padding: 40px 15px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-height:500px;
 }
 .error-actions {
   margin-top: 15px;
