--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-
-
 /* Dropdown Button */
 .dropbtn {
   /* background-color: transparent; */
@@ -21,7 +19,7 @@
   position: absolute;
   background-color: #ffffff;
   min-width: 200px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -34,12 +32,21 @@
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: rgb(243, 243, 243);}
+.dropdown-content a:hover {
+  background-color: rgb(243, 243, 243);
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
 
-.not-allowed {pointer-events: fill !important;cursor: not-allowed !important;}
+.not-allowed {
+  pointer-events: fill !important;
+  cursor: not-allowed !important;
+}
