--- a/src/domain/Header/style.css
+++ b/src/domain/Header/style.css
@@ -2,7 +2,19 @@
   padding: 0 10% !important;
 }
 
-.headerNavb{
+.navbar-nav .nav-item .nav-link, .login-link {
+  color: #fff;
+  opacity: 0.8;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+  opacity: 1;
+  color: #fff;
+  text-shadow: 2px 2px 2px 2px #fff;
+  text-decoration-thickness: 0.4rem;
+}
+
+.headerNavb {
   background: cornflowerblue;
   color: #fff;
   padding-top: 10px !important;
@@ -35,17 +47,16 @@ background-color: none !important;
 
 .headerProducts>.dropdown-toggle:active {
   /*Without this, clicking will make it sticky*/
-    pointer-events: none;
+  pointer-events: none;
 }
 
 
-#dropdown-menu > .dropdown-menu {
+#dropdown-menu>.dropdown-menu {
   display: block;
 }
 
-.dropdown-menu {
-  margin:2px auto;
-
+.dropdown-menu, dropdown-menu {
+  margin: 2px auto;
 }
 
 
@@ -55,7 +66,7 @@ background-color: none !important;
   background-color: #f9f9f9;
   width: 100%;
   left: 0;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -65,6 +76,10 @@ background-color: none !important;
   color: white;
 }
 
-.headerProducts:hover + .dropdown-content {
+.headerProducts:hover+.dropdown-content {
   display: block;
+}
+
+.theme-toggle > label {
+  border-color: #eee;
 }
