--- a/src/domain/Header/style.css
+++ b/src/domain/Header/style.css
@@ -59,8 +59,12 @@ background-color: none !important;
   margin: 2px auto;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
-.dropdown-content {
+.dropdown .dropdown-content {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -68,6 +72,21 @@ background-color: none !important;
   left: 0;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+}
+
+.dropdown .dropdown-content:hover {
+  display: block;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  left: 0;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown :hover {
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content .header {
