--- a/src/domain/Header/style.css
+++ b/src/domain/Header/style.css
@@ -68,26 +68,17 @@ background-color: none !important;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  width: 100%;
+  width: max-content;
   left: 0;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
-.dropdown .dropdown-content:hover {
-  display: block;
-  position: absolute;
-  background-color: #f9f9f9;
-  width: 100%;
-  left: 0;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
 
-.dropdown :hover {
+/* .dropdown :hover {
   position: relative;
   display: inline-block;
-}
+} */
 
 .dropdown-content .header {
   background: red;
@@ -101,4 +92,29 @@ background-color: none !important;
 
 .theme-toggle > label {
   border-color: #eee;
+}
+
+/**
+Hoverable Dropdown
+
+*/
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  left: 0;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+} */
+
+.one-cont a{
+  display: flex;
+  flex-direction: column;
+  min-width: fit-content;
 }
