Fixed breaking changes of alignments due to classes changed in bootstrap 5

--- a/src/domain/Account/style.css
+++ b/src/domain/Account/style.css
@@ -1,9 +1,6 @@
-.form-check > label {
-  font-size: 14px;
-  margin-left: 1.5em;
-  font-weight: 400;
-  vertical-align: middle;
-}
+/* .form-check {
+  padding-left: 2.5em;
+} */
 
 .productList {
   background-color: #fff;
